# rust-react-app

./: .gitignore  convert.py  package.json  pnpm-lock.yaml  public_key.pem  settings.json
.github/: test.yml
.github/workflows/: release.yml
python/: main.py  requirements.txt  sele.py
python/app/: main.py
src/: App.tsx  log.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  settings.json  tauri.conf.json
src-tauri/assets/: loading.html
src-tauri/src/: chorme_v.rs  config.rs  globalstate.rs  install.rs  logger.rs  main.rs  pystart.rs  utils.rs  uuid.rs  verify.rs  windows.rs
src/chrome/: chromium.ts  index.tsx
src/invoke/: index.ts
src/verify/: index.tsx
